show releases in a package
